<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.tech.todolist.view.todo.AddEditTodoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_toolbar"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title"
        android:textColor="@color/common_black_text_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/shape_round_text_bg"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_title"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/description"
        android:textColor="@color/common_black_text_color"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/shape_round_text_bg"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:hint="@string/hint_description"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:lines="5"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/date"
        android:textColor="@color/common_black_text_color"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaskTime"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/shape_round_text_bg"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/dp_12"
        android:textColor="@color/color_common_text_dark"
        android:textSize="@dimen/sp_13"
        android:textStyle="normal"
        android:hint="@string/select_date_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateTime" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/common_button_selector"
        />

</androidx.constraintlayout.widget.ConstraintLayout>